//
// Copyright (C) 2019 kpango (Yusuke Kato)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package meta_manager;

option go_package = "github.com/vdaas/vald/apis/grpc/meta";
option java_multiple_files = true;
option java_package = "org.vdaas.vald.meta";
option java_outer_classname = "meta";

import "payload.proto";
import "google/api/annotations.proto";
import "pb/gql.proto";

service Meta {
  option (gql.svc_type) = QUERY;
  rpc GetMeta(payload.Object.ID) returns (payload.Object.ID) {
    option (google.api.http).get = "/meta/{id}";
  }
  rpc GetMetas(payload.Object.IDs) returns (payload.Object.IDs) {
    option (google.api.http).post = "/meta";
  }
}
